Rewriting the decoder (parse()) routines.
Working on a bidirectional encode/decode system.  Making the decode
phase use the same defines as the encoder will make 1:1 parity possible
for decoding and encoding.  E.g my goal is lossless decode -> IR ->
encode.

--- a/examples/web.html
+++ b/examples/web.html
@@ -5,16 +5,9 @@
             async function onChangeFile(ev) {
                 const file = ev.currentTarget.files[0];
                 const buf = new Uint8Array(await file.arrayBuffer());
-                const fitParser = new backfit.FitParser({
-                    speedUnit: 'km/h',
-                    lengthUnit: 'm',
-                    temperatureUnit: 'celsius',
-                    elapsedRecordField: true,
-                    mode: 'list',
-                });
+                const fitParser = backfit.FitParser.decode(buf);
                 const preEl = document.querySelector('#output');
-                const data = fitParser.decode(buf);
-                preEl.innerText = JSON.stringify(data, null, 4);
+                preEl.innerText = JSON.stringify(fitParser.records, null, 4);
             }
 
             function onMakeSegmentFile() {
