Create interface for hand created messages.
FitParser.addMessage(globName, fieldsObject);  Generates the same IR as
the decoder.  And thus the encoder can create content from this.

Next steps.  Optimize the encoder to reuse message definitions and use
localmessagetype values in a way that conserves decoder memory.  e.g. if
you know you'll never use a prior message definition again you can reuse
the existing localmessagetype value and the decoder can free the memory
used for the obsolete message defintion.

--- a/examples/web.html
+++ b/examples/web.html
@@ -14,7 +14,12 @@
             }
 
             function onMakeSegmentFile() {
-                const fitParser = new backfit.FitParser({});
+                const fitParser = new backfit.FitParser();
+                fitParser.addMessage('file_id', {
+                    manufacturer: 'strava',
+                    type: 'segment',
+                    time_created: new Date()
+                });
                 const buf = fitParser.encode();
                 download('hello.fit', buf);
             }
